--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Home/Contact.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Home/Contact.cshtml
@@ -1,17 +1,113 @@
 ﻿@{
     ViewBag.Title = "Contact";
+    ViewBag.PageTitle = "Contact";
+    ViewBag.TitlePrincipal = "Contact Page";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+@section styles {
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin="" />
+}
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<div class="panel panel-color panel-info">
+    <div class="panel-heading">
+        <h3 class="panel-title">Nomisma</h3>
+    </div>
+    <div class="panel-body">
+        <div style="text-align : center;">
+            <img src="~/Images/Logos/Nomisma.png" alt="nomisma logo" width="339" height="169">
+        </div>
+
+        <div class="col-lg-12">
+            <div class="panel panel-primary">
+                <div class="panel-body">
+                    <h4 class="m-t-0 m-b-30">We're here</h4>
+                    <div id="mapDiv" style="height: 300px"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-6">
+            <div class="panel">
+                <div class="panel-body user-card">
+                    <div class="media-main">
+                        <a class="pull-left" href="#">
+                            <img class="thumb-lg img-circle" src="~/Uploads/Users/avatar-1.jpg" alt="">
+                        </a>
+                        <div class="info">
+                            <h4>Chiara Volpato</h4>
+                            <p class="text-muted">Project Manager</p>
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+
+                    <p class="text-muted info-text">
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                    </p>
+                    <hr>
+                    <ul class="social-links list-inline m-b-0">
+                        <li>
+                            <a title="" data-placement="top" data-toggle="tooltip" class="tooltips" href="tel:0516483197" data-original-title="0516483193"><i class="fa fa-phone"></i></a>
+                        </li>
+                        <li>
+                            <a title="" data-placement="top" data-toggle="tooltip" class="tooltips" href="mailto:chiara.volpato@nomisma.it" data-original-title="chiara.volpato@nomisma.it"><i class="fa fa-envelope-o"></i></a>
+                        </li>
+                    </ul>
+                </div> <!-- panel-body -->
+            </div>
+        </div>
+
+        <div class="col-sm-6">
+            <div class="panel">
+                <div class="panel-body user-card">
+                    <div class="media-main">
+                        <a class="pull-left" href="#">
+                            <img class="thumb-lg img-circle" src="~/Uploads/Users/avatar-1.jpg" alt="">
+                        </a>
+                        <div class="info">
+                            <h4>Stefano Baldi</h4>
+                            <p class="text-muted">Project Manager</p>
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+
+                    <p class="text-muted info-text">
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                    </p>
+                    <hr>
+                    <ul class="social-links list-inline m-b-0">
+                        <li>
+                            <a title="" data-placement="top" data-toggle="tooltip" class="tooltips" href="tel:0516483193" data-original-title="0516483197"><i class="fa fa-phone"></i></a>
+                        </li>
+                        <li>
+                            <a title="" data-placement="top" data-toggle="tooltip" class="tooltips" href="mailto:stefano.baldi@nomisma.it" data-original-title="stefano.baldi@nomisma.it"><i class="fa fa-envelope-o"></i></a>
+                        </li>
+                    </ul>
+                </div> <!-- panel-body -->
+            </div>
+        </div>
+
+    </div>
+
+</div> <!-- panel -->
+
+@section scripts {
+    <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js" integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og==" crossorigin=""></script>
+
+    <script>
+        // position we will use later
+        var lat = 44.4922377;
+        var lon = 11.3519345;
+        // initialize map
+        map = L.map('mapDiv').setView([lat, lon], 14);
+        // set map tiles source
+        L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors',
+            maxZoom: 22,
+            maxNativeZoom: 18
+        }).addTo(map);
+        // add marker to the map
+        marker = L.marker([lat, lon]).addTo(map);
+        // add popup to the marker
+        marker.bindPopup("<b>Nomisma Spa</b><br />Strada Maggiore, 44<br />Bologna").openPopup();
+    </script>
+}
