--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Home/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Home/Index.cshtml
@@ -1,31 +1,56 @@
 ﻿@{
     ViewBag.Title = "Home Page";
+    ViewBag.PageTitle = "Dashboard";
+    ViewBag.TitlePrincipal = "General Information";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+@if (TempData["Message"] != null)
+{
+    <div class="alert alert-success">
+        @TempData["Message"]
+    </div>
+}
+
+@section styles {
+    <!-- Sweet Alert -->
+    <link href="~/Scripts/plugins/bootstrap-sweetalert/sweet-alert.css" rel="stylesheet" type="text/css">
+
+    <!-- jvectormap -->
+    <link href="~/Scripts/plugins/jvectormap/jquery-jvectormap-2.0.2.css" rel="stylesheet">
+}
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-lg-12">
+        <div class="panel panel-primary">
+            <div class="panel-body">
+                <h4 class="m-t-0 m-b-30">Tobacco&Nicotine World Map</h4>
+                <div id="world-map-markers" style="height: 400px"></div>
+            </div>
+        </div>
     </div>
 </div>
+
+<div class="row" style="visibility:hidden;" id="blockValuesNotNull">
+    <div class="col-md-4">
+        <div class="panel">
+            <div class="panel-body">
+                <h4 class="m-b-30 m-t-0" id="textValuesNotNull"></h4>
+
+                <div id="insertValuesNotNull">
+                </div>
+
+            </div>
+        </div>
+    </div> <!-- end col -->
+</div>
+<!-- end row -->
+
+@section scripts {
+    <!-- Sweet-Alert  -->
+    <script src="~/Scripts/plugins/bootstrap-sweetalert/sweet-alert.min.js" type="text/javascript"></script>
+
+    <script src="~/Scripts/plugins/jvectormap/jquery-jvectormap-2.0.2.min.js"></script>
+    <script src="~/Scripts/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+    <script src="~/Scripts/plugins/jvectormap/gdp-data.js"></script>
+    <script src="~/Scripts/plugins/jvectormap/jvectormap.init.js"></script>
+}
