--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Shared/Error.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Shared/Error.cshtml
@@ -1,9 +1,35 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
 @{
-    ViewBag.Title = "Errore";
+    ViewBag.Title = "Error";
+    Layout = null;
 }
 
-<h1 class="text-danger">Errore.</h1>
-<h2 class="text-danger">Si è verificato un errore durante l'elaborazione della richiesta.</h2>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title>@ViewBag.Title - Tobacco&Nicotine Database</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="~/Content/font-awesome.css" rel="stylesheet" type="text/css">
+    <link href="~/Content/style.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+
+    <!-- Begin page -->
+    <div class="accountbg"></div>
+    <div class="wrapper-page">
+        <div class="ex-page-content text-center">
+            <h1 class="text-white">Error</h1>
+            <h2 class="text-white">An error occurred while processing your request</h2><br>
+
+            <a class="btn btn-info waves-effect waves-light" href="/Home/Index">Go Back</a>
+        </div>
+    </div>
+
+</body>
+</html>
