Prevent after login/logout

--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/Register.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/Register.cshtml
@@ -24,9 +24,12 @@
         <div class="panel panel-color panel-primary panel-pages">
 
             <div class="panel-body">
-                <h3 class="text-center m-t-0 m-b-15">
+                <div style="text-align : center;">
+                    <img src="~/Images/Logos/Nomisma.png" height="101" width="204">
+                </div>
+                <div class="text-center m-t-0 m-b-15">
                     <a href="/Account/Login" class="logo logo-admin"><span>Tobacco</span>Database</a>
-                </h3>
+                </div>
                 <h4 class="text-muted text-center m-t-0"><b>Sign Up</b></h4>
 
                 <form class="form-horizontal" method="post" action="/Account/Register">
