--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/Login.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/Login.cshtml
@@ -24,12 +24,12 @@
         <div class="panel panel-color panel-primary panel-pages">
 
             <div class="panel-body">
-                <h3 class="text-center m-t-0 m-b-15">
-                    <a href="/Account/Login" class="logo logo-admin"><span>Tobacco</span>Database</a>
-
+                <div style="text-align : center;">
                     <img src="~/Images/Logos/Nomisma.png" height="101" width="204">
-                </h3>
-                <br>
+                </div>
+                <div class="text-center m-t-0 m-b-15">
+                    <a href="/Account/Login" class="logo logo-admin"><span>Tobacco</span>Database</a>
+                </div>
                 <h4 class="text-muted text-center m-t-0"><b>Sign In</b></h4>
 
                 @if (TempData["Message"] != null)
