Manage: edit password + profile picture

--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Manage/ChangePassword.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Manage/ChangePassword.cshtml
@@ -1,40 +1,109 @@
 ﻿@model TobaccoNicotineApplication.Models.ChangePasswordViewModel
+
 @{
-    ViewBag.Title = "Cambia password";
+    ViewBag.Title = "Profile";
+    ViewBag.PageTitle = "Profile";
+    ViewBag.TitlePrincipal = "Change Account Settings";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="panel panel-color panel-dark">
+    <div class="panel-heading">
+        <h3 class="panel-title">Change Password</h3>
+    </div>
+    <div class="panel-body">
+        @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            
+            <div class="form-group">
+                <label class="col-md-2 control-label">Current Password</label>
+                <div class="col-md-10">
+                    <input type="password" id="pass" class="form-control" name="OldPassword"
+                           placeholder="Old Password"
+                           data-parsley-required-message="Please enter your old password."
+                           data-parsley-required />
+                    @Html.ValidationMessage("", new { @class = "text-danger" })
+                </div>
+            </div>
 
-@using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Form Cambia password</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
-        </div>
+            <div class="form-group">
+                <label class="col-md-2 control-label">New Password</label>
+                <div class="col-md-10">
+                    <input type="password" id="pass2" class="form-control" name="NewPassword"
+                           placeholder="New Password"
+                           data-parsley-minlength="8"
+                           data-parsley-maxlength="24"
+                           data-parsley-required-message="Please enter your new password."
+                           data-parsley-uppercase="1"
+                           data-parsley-lowercase="1"
+                           data-parsley-number="1"
+                           data-parsley-special="1"
+                           data-parsley-required />
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-2 control-label">Confirm Password</label>
+                <div class="col-md-10">
+                    <input type="password" class="form-control" name="ConfirmPassword"
+                           placeholder="Re-Type New Password"
+                           data-parsley-equalto="#pass2"
+                           data-parsley-required-message="Please re-enter your password."
+                           data-parsley-required />
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Change password" class="btn btn-default" />
+                </div>
+            </div>
+        }
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Cambia password" class="btn btn-default" />
-        </div>
-    </div>
-}
+</div>
+
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/plugins/parsleyjs/parsley.min.js"></script>
+
+    <script>
+        //has uppercase
+        window.Parsley.addValidator('uppercase', {
+            requirementType: 'number',
+            validateString: function (value, requirement) {
+                var uppercases = value.match(/[A-Z]/g) || [];
+                return uppercases.length >= requirement;
+            },
+            messages: {
+                en: 'Your password must contain at least (%s) uppercase letter.'
+            }
+        });
+
+        //has lowercase
+        window.Parsley.addValidator('lowercase', {
+            requirementType: 'number',
+            validateString: function (value, requirement) {
+                var lowecases = value.match(/[a-z]/g) || [];
+                return lowecases.length >= requirement;
+            },
+            messages: {
+                en: 'Your password must contain at least (%s) lowercase letter.'
+            }
+        });
+
+        //has number
+        window.Parsley.addValidator('number', {
+            requirementType: 'number',
+            validateString: function (value, requirement) {
+                var numbers = value.match(/[0-9]/g) || [];
+                return numbers.length >= requirement;
+            },
+            messages: {
+                en: 'Your password must contain at least (%s) number.'
+            }
+        });
+
+        $(document).ready(function () {
+            $('form').parsley();
+        });
+    </script>
 }
