Add all Sources

--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Admin/Grant.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Admin/Grant.cshtml
@@ -54,6 +54,9 @@
                 <b>IMPORT:</b> ADMIN, WRITER
             </p>
             <p class="text-muted m-b-30">
+                <b>UPLOAD:</b> ADMIN, WRITER
+            </p>
+            <p class="text-muted m-b-30">
                 <b>REPORT:</b> ADMIN, READER, WRITER
             </p>
         </div>
